--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,14 +25,14 @@ jobs:
         run: npm install
 
       - name: Build Library
-        run: npm run build
+        run: npm run prepublish
              
       - name: Release new version
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           access: public
-          package: package
+        #   package: package
 
       - name: Create new tag
         id: release
