--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enkitek/sveltestrap",
-  "version": "5.11.6",
+  "version": "5.11.7",
   "main": "dist/sveltestrap.js",
   "module": "dist/sveltestrap.es.js",
   "jsnext:main": "dist/sveltestrap.es.js",
@@ -67,6 +67,7 @@
     "jest-transform-svelte": "^2.1.1",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.10",
     "prettier": "^2.3.1",
@@ -83,6 +84,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "scss": "^0.2.4",
     "sirv-cli": "^1.0.12",
     "standard-version": "^9.3.0",
     "storybook": "^7.2.1",
